--- a/apps/user/src/app/(auth)/_components/App/style.module.css
+++ b/apps/user/src/app/(auth)/_components/App/style.module.css
@@ -1,5 +1,126 @@
-.top {
+.wrapper {
   background-image: url(/background.jpg);
   background-position: center bottom;
   background-size: cover;
+}
+
+.section {
+  align-items: flex-start;
+  display: grid;
+  gap: min(15px, 2.25dvw);
+  margin: 0 auto;
+  padding: min(15px, 2.25dvw);
+  width: min(100%, 1280px);
+
+  @media (width >= 980px) {
+    grid-template: auto / 2fr 1fr;
+  }
+}
+
+.followNews,
+.topNews {
+  background: #fff;
+  border: 1px solid #e8eaee;
+  border-radius: min(15px, 2.25dvw);
+  padding: 0 min(15px, 2.25dvw);
+}
+
+.h1,
+.h2 {
+  font-size: 2.1rem;
+  font-weight: 500;
+  padding: min(15px, 2.25dvw) 0 calc(min(15px, 2.25dvw) / 2);
+}
+
+.article {
+  border-top: 1px solid #e8eaee;
+  display: grid;
+  padding: min(15px, 2.25dvw) 0;
+  gap: min(15px, 2.25dvw);
+}
+
+.followNews {
+  .article[data-article="pickup"] {
+    @media (width < 980px) {
+      grid-template: auto / auto;
+    }
+    @media (width >= 980px) {
+      grid-template: auto / 1fr 1.25fr;
+    }
+  }
+
+  .article[data-article="pickup"] .title {
+    font-size: 2.4rem;
+  }
+
+  .article[data-article="dropoff"] {
+    grid-template: auto / 3fr 1fr;
+  }
+
+  .article[data-article="dropoff"] .detail {
+    order: -1;
+  }
+
+  .article[data-article="dropoff"] .title {
+    font-size: 2.1rem;
+  }
+}
+
+.topNews {
+  .article {
+    @media (width < 980px) {
+      grid-template: auto / 3fr 1fr;
+    }
+    @media (width >= 980px) {
+      grid-template: auto / 1.5fr 1fr;
+    }
+  }
+
+  .detail {
+    order: -1;
+  }
+
+  .title {
+    @media (width < 980px) {
+      font-size: 2.1rem;
+    }
+    @media (width >= 980px) {
+      font-size: 1.8rem;
+    }
+  }
+}
+
+.thmubnail {
+  aspect-ratio: 16 / 9;
+  position: relative;
+  border-radius: min(15px, 2.25dvw);
+  overflow: hidden;
+}
+
+.title {
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
+  overflow: hidden;
+}
+
+.date {
+  font-size: 1.35rem;
+}
+
+.user {
+  align-items: center;
+  display: flex;
+  margin: 9px 0 0;
+  gap: 9px;
+}
+
+.icon {
+  border-radius: 50dvmax;
+}
+
+.name {
+  font-size: 1.35rem;
 }
