--- a/apps/user/src/app/(auth)/_components/MobileNavigation/style.module.css
+++ b/apps/user/src/app/(auth)/_components/MobileNavigation/style.module.css
@@ -11,5 +11,13 @@
 }
 
 .link {
-  display: block;
+  align-content: center;
+  display: grid;
+  height: 100%;
+  justify-content: center;
+  justify-items: center;
+}
+
+.text {
+  font-size: 1.2rem;
 }
