--- a/apps/hiyasakamishiro/src/app/(auth)/_components/AuthLayout/style.module.css
+++ b/apps/hiyasakamishiro/src/app/(auth)/_components/AuthLayout/style.module.css
@@ -1,10 +1,14 @@
+.container {
+  background: #2fc4fe;
+  min-height: 100dvh;
+}
+
 .main {
   margin: 0 0 60px;
 }
 
 .tabList {
   background: #fff;
-  border-top: 1px solid #000;
   display: flex;
   height: 60px;
   inset: calc(100dvh - 60px) 0;
@@ -13,6 +17,7 @@
 
 .tab {
   align-items: center;
+  color: #999;
   display: flex;
   flex: 1;
   flex-direction: column;
